[gd_scene load_steps=4 format=3 uid="uid://dwhdyj3ny2bsj"]

[ext_resource type="Script" uid="uid://naduggkkj8j6" path="res://scripts/bullet.gd" id="1_y25gk"]
[ext_resource type="Texture2D" uid="uid://dfyon0n1801uj" path="res://assets/bullet.png" id="2_l5glv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ipdhj"]
size = Vector2(3.75, 4)

[node name="Bullet" type="Area2D"]
script = ExtResource("1_y25gk")
SPEED = 500.0
RANGE = 0.5

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, 0)
texture = ExtResource("2_l5glv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.875, 0)
shape = SubResource("RectangleShape2D_ipdhj")

[node name="RangeTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RangeTimer" to="." method="_on_range_timer_timeout"]
